src/keycloak/manifests/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres-deployment
  namespace: keycloak
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-data
        nfs:
          server: nas.lan
          path: /volume1/k3s/keycloak/data
      containers:
        - name: postgres-container
          image: postgres:16.2
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
