src/keycloak/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: keycloak
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
      - name: providers
        nfs:
          server: nas.lan
          path: /volume1/k3s/keycloak/providers
      - name: tls
        secret:
          secretName: keycloak-tls-secret
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1.0
          args: ["start"]
          volumeMounts:
          - name: tls
            mountPath: /opt/keycloak/tls
          ports:
            - name: https
              containerPort: 8443
            - name: http
              containerPort: 8080
