src/keycloak/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: http
      port: 80
      targetPort: 8080
    - name: management 
      port: 9000
      targetPort: 9000
  selector:
    app: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-service
  namespace: keycloak
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
